# LORR24

./: .gitignore  CMakeLists.txt  README.md  commands.txt  error.txt  out.prof  profile_output.prof  slurm_  tmpTest.json
RL/: envWrapper.py  requirements.txt  requirements_optimization.txt  run.slurm  test.py  train.py  train_multiple_slurm.py
RL/ckpt/: A2C.pth  A2C_1e-3.pth  A2C_1e-3_best.pth  A2C_best.pth  SAC.pth  SAC_A**10.pth  SAC_A**10_best.pth  SAC_A**20.pth  SAC_A**20_1Idle.pth  SAC_A**20_1Idle_best.pth  SAC_A**20_1e-2.pth  SAC_A**20_1e-2_best.pth  SAC_A**20_1e-4.pth  SAC_A**20_1e-4Long.pth  SAC_A**20_1e-4Long_best.pth  SAC_A**20_1e-4_best.pth  SAC_A**20_20000.pth  SAC_A**20_20000_best.pth  SAC_A**20_5000long.pth  SAC_A**20_5000long_best.pth  SAC_A**20_afterScheduler.pth  SAC_A**20_afterScheduler_best.pth  SAC_A**20_batch20.pth  SAC_A**20_batch20_best.pth  SAC_A**20_best.pth  SAC_A**20_long.pth  SAC_A**20_long_best.pth  SAC_A**20_negative.pth  SAC_A**20_negative_best.pth  SAC_A**20_test_cluster.pth  SAC_A**20_test_cluster_best.pth  SAC_A**20_timetest.pth  SAC_A**20_timetest_best.pth  SAC_A**20_withSpeedup.pth  SAC_A**20_withSpeedup_best.pth  SAC_A**40.pth  SAC_A**40_best.pth  SAC_A*.pth  SAC_A*_best.pth  SAC_best.pth  (+18 more)
RL/example_checkpoints/: warehouse_8x6_200_agents.pth  warehouse_9x8_300_agents.pth
default_planner/: TrajLNS.h  const.h  heuristics.cpp  heuristics.h  pibt.cpp  pibt.h  planner.cpp  planner.h  scheduler.cpp  search.cpp
envWrapper/: CMakeLists.txt  ExtendedBaseSystem.cpp  ExtendedBaseSystem.h  NoManSkyTest.py  envWrapper.cpp  envWrapper.h  testEnv.py
example_problems/custom_warehouse.domain/: warehouse_13x12.json  warehouse_1x1_100.json  warehouse_24x15.json  warehouse_31x15.json  warehouse_4x3.json  warehouse_4x3_100.json  warehouse_6x4.json  warehouse_8x6.json  warehouse_9x8.json  warehouse_large.json
example_problems/warehouse.domain/: sortation_large_2000.json  warehouse_large_5000.json
inc/: ActionModel.h  BacktrackBundle.h  CompetitionSystem.h  Entry.h  MAPFPlanner.h  Nodes.h  Roadmap.h  RoadmapGraph.h  SharedEnv.h  Simulator.h  TaskManager.h  TaskScheduler.h  Tasks.h  edge_features.h
logs/my_rl_run/: events.out.tfevents.1740458583.JohannesLaptop.9118.0  events.out.tfevents.1740460083.JohannesLaptop.18103.0  (+1 more)
my_scheduler/: schedulerActivatedAdvantage.cpp  schedulerActivatedAdvantage.h  schedulerActivatedGreedy.cpp  schedulerActivatedGreedy.h  schedulerGreedyOptiDist.cpp  schedulerGreedyOptiDist.h  schedulerILP.cpp  schedulerILP.h  schedulerILPOptiDist.cpp  schedulerILPOptiDist.h  schedulerILPsparse.cpp  schedulerILPsparse.h  schedulerPreReserve.cpp  schedulerPreReserve.h  schedulerRL.cpp  schedulerRL.h  schedulerScalingGreedy.cpp  schedulerScalingGreedy.h  schedulerTEMPLATE.cpp  schedulerTEMPLATE.h
my_test_scripts/: ILP_lol  ILP_lol.cpp  ILP_sparse  ILP_sparse.cpp  ILP_test  ILP_test.cpp  readme.md
nn_optimization/: nn_test.py  nn_test_NNConv.py  nn_test_default_enc_all.py  nn_test_fully_6layers.py  nn_test_fully_6layers18enc.py  nn_test_fully_8layers2048.py  nn_test_fully_small.py  nn_test_fully_small1024.py  nn_test_multiple_slurm.py  nn_test_multiple_slurm_GATConv.py  nn_test_multiple_slurm_GATConvDouble.py  nn_test_multiple_slurm_GATv2Conv.py  nn_test_multiple_slurm_TransformerConv.py  nn_test_multiple_slurm_TransformerConvDouble.py  nn_test_multiple_slurm_TransformerConvDouble2.py  nn_test_multiple_slurm_TransformerConvExtended.py  nn_test_penta_cat_pos_all.py  nn_test_penta_cat_pos_enc_10_all.py  nn_test_penta_cat_pos_enc_30_all.py  nn_test_penta_cat_pos_enc_6_all.py  nn_test_penta_cat_pos_enc_half_one.py  nn_test_penta_cat_pos_enc_one.py  nn_test_penta_cat_pos_one.py  nn_test_penta_edge_index_right.py  nn_test_penta_edge_index_wrong.py  nn_test_penta_hidden_channels.py  nn_test_seven_cat_right.py  nn_test_seven_cat_wrong.py  nn_test_ten_cat_right.py  nn_test_ten_cat_wrong.py  run.slurm
outputs/: pyTest.json  random_200_default_strategy_s100.json  random_200_default_strategy_s600.json  tmp.json  trainRL.json
roadmap/: warehouse_8x6.roadmap
roadmapRL/: run.slurm  train.py  train_multiple_slurm.py
slurm/: error.txt  error1e-4.txt  errorLong.txt  output.txt
slurm_errors/: error_3416835.txt  error_3416836.txt  error_3416837.txt  error_3416838.txt  error_3416839.txt  error_3416840.txt
slurm_shared/: 9000.json  Astar-classic_id1_best_2130.pth  GPU13x12_500_TransformerConvAction_Err50_bcktr20_Fin50_best_680.pth  GPU6x4_TransformerConvAction_Err50_bcktr20_Fin50_best_684.pth  GPU_TransformerConvAction_Err50_Back20_Fin50_AgentTaskRatio_0p5_best_321.pth  GPU_TransformerConvAction_Err50_Back20_Fin50_AgentTaskRatio_0p75_best_859.pth  GPU_TransformerConvAction_Err50_Back20_Fin50_AgentTaskRatio_1p0_best_1030.pth  GPU_TransformerConvAction_Err50_bcktr20_Fin50_best_606.pth  GPU_TransformerConvAction_Err50_bcktr20_Fin50_try2_best_1820.pth  GPU_TransformerConvAction_FirstErrand50_BacktrackMaxDist20_TaskFinished50.pth  error.txt  error24x15.txt  error300ag.txt  error9x8_300.txt  errorDivide.txt  errorHalfCrit.txt  errorHalfDoub.txt  errorPL1.txt  errorPL2.txt  errorTraDoubl.txt  errorTraNoMrk.txt  error_3416841.txt  error_3416852.txt  error_3416857.txt  error_3416864.txt  error_3422034.txt  error_3483125.txt  error_3483929.txt  error_3489880.txt  error_3495726.txt  error_3495727.txt  errorblubbb.txt  errorchanDuTr.txt  errorenc30.txt  errorglobFeeN.txt  errorglobfeeN.txt  errorlrsched.txt  errornewObs.txt  errornewObsMr.txt  errorreplGrph.txt  (+10 more)
src/: ActionModel.cpp  CompetitionSystem.cpp  Entry.cpp  MAPFPlanner.cpp  Nodes.cpp  Roadmap.cpp  RoadmapGraph.cpp  Simulator.cpp  TaskManager.cpp  TaskScheduler.cpp  edge_features.cpp
wandb/: latest-run
(+974 files in other folders)
